crates/llvmkit-ir/tests/compile_fail/intrinsic_id_raw_constructor_private.stderr
error[E0423]: cannot initialize a tuple struct which contains private fields
  --> tests/compile_fail/intrinsic_id_raw_constructor_private.rs:12:15
   |
12 |     let _id = IntrinsicId(core::num::NonZeroU32::new(1).unwrap());
   |               ^^^^^^^^^^^
   |
note: constructor is not visible here due to private fields
  --> src/intrinsics.rs
   |
   | pub struct IntrinsicId(NonZeroU32);
   |                        ^^^^^^^^^^ private field
